@@ -6,9 +6,9 @@ EXTRA_DIST = $(as_libtool_EXTRA_DIST)
 noinst_DATA = $(as_libtool_noinst_DATA_files)
 
 libgstbytestreamincludedir = $(includedir)/gstreamer-@GST_MAJORMINOR@/gst/bytestream
-libgstbytestreaminclude_HEADERS = bytestream.h
+libgstbytestreaminclude_HEADERS = bytestream.h adapter.h
 
-libgstbytestream_la_SOURCES = bytestream.c 
+libgstbytestream_la_SOURCES = bytestream.c adapter.c
 libgstbytestream_la_CFLAGS = $(GST_CFLAGS)
 libgstbytestream_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS) $(as_libtool_LDFLAGS)
 
