@@ -1,3 +1,11 @@
+2004-05-04  Benjamin Otte  <otte@gnome.org>
+
+	* libs/gst/bytestream/Makefile.am:
+	* libs/gst/bytestream/adapter.c: 
+	* libs/gst/bytestream/adapter.h:
+	  add GstAdapter, similar to bytestream, but oesn't require ugly event
+	  handling or uglier loopbased elements
+
 2004-05-03  David Schleef  <ds@schleef.org>
 
 	* testsuite/caps/Makefile.am: Fix spelling of Ηρατοσθενες
